--- a/src/core.css
+++ b/src/core.css
@@ -2,6 +2,7 @@ html,
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 16px;
 }
 
 * {
