--- a/src/components/images/hero/hero.css
+++ b/src/components/images/hero/hero.css
@@ -12,6 +12,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
-  font-size: 2rem;
+  color: hsl(49, 7%, 84%);
+  font-size: 4rem;
 }
