--- a/src/core.css
+++ b/src/core.css
@@ -2,6 +2,10 @@ html,
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 16px;
+  background: hsl(49, 7%, 94%);
+  color: #333;
+  line-height: 1.5;
 }
 
 * {
