added normalize.css and added signup form and component styling

--- a/src/components/signup/signup-form.css
+++ b/src/components/signup/signup-form.css
@@ -5,3 +5,12 @@
 .content p {
   padding-bottom: 1.25rem;
 }
+
+.formContainer {
+  max-width: 275px;
+  margin: auto;
+}
+
+.submit {
+  float: right;
+}
