--- a/src/components/forms/inputs/generic.css
+++ b/src/components/forms/inputs/generic.css
@@ -1,14 +1,30 @@
 .container {
-  display: flex;
   width: 100%;
+  margin: 0 0 1rem;
 }
 
 .label {
-  flex: 1;
   padding: 0 0 0.75rem;
 }
 
+.input {
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid #ccc8c4;
+  width: 100%;
+}
+
+.input:focus {
+  outline: none;
+  border-color: hsl(208, 75%, 45%);
+}
+
 .inputContainer {
-  flex: 2;
-  padding: 0 0 0.75rem;
+}
+
+.error {
+  color: hsl(20, 100%, 35%);
+  display: block;
+  font-size: 0.75rem;
+  padding: 0 0 0 1.05rem;
 }
