--- a/src/components/forms/buttons/base.css
+++ b/src/components/forms/buttons/base.css
@@ -1,4 +1,5 @@
 .button {
+  cursor: pointer;
   text-decoration: none;
   background: linear-gradient(hsl(208, 34%, 55%), hsl(208, 34%, 35%));
   border-radius: 3px;
